<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dev.ikm</groupId>
        <artifactId>ikm-framework</artifactId>
        <version>3.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>komet-orchestrationService</artifactId>

    <name>Komet µsOrchestrator</name>

    <properties>
        <jgit.version>6.10.0.202406032230-r-r4</jgit.version>
        <junit.version>5.10.0</junit.version>
        <javafx.version>21.0.1</javafx.version>
        <lucene-core.version>9.7.0</lucene-core.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>details</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>list</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>navigator</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>rules</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>preferences</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>executor</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>progress</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>kview</artifactId>
            <version>${komet.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.ikm</groupId>
            <artifactId>plugin-layer</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j-slf4j2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm</groupId>
            <artifactId>orchestration-interfaces</artifactId>
            <version>3.0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>dev.ikm.komet.orchestrator/dev.ikm.komet.orchestrator.KometOrchestrator</mainClass>
                            <options>
                                <option>--add-exports</option>
                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for debugging -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
                                <option>--add-exports</option>
                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</option>
                            </options>
                            <mainClass>dev.ikm.komet.orchestrator/dev.ikm.komet.orchestrator.KometOrchestrator</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>plugin-service-loader</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>dev.ikm</groupId>
                                    <artifactId>plugin-service-loader</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/plugin-service-loader</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-datastore-plugins</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>dev.ikm.orchestration.provider</groupId>
                                    <artifactId>changeset-writer</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>dev.ikm.orchestration.provider</groupId>
                                    <artifactId>data-services</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>dev.ikm.tinkar</groupId>
                                    <artifactId>data-ephemeral-provider</artifactId>
                                    <version>${tinkar.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>dev.ikm.tinkar</groupId>
                                    <artifactId>data-spinedarray-provider</artifactId>
                                    <version>${tinkar.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>dev.ikm.orchestration.provider</groupId>
                                    <artifactId>stats-menu-provider</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>dev.ikm.orchestration.provider</groupId>
                                    <artifactId>general-menu-provider</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/plugins</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-search-plugins</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>dev.ikm.tinkar</groupId>
                                    <artifactId>search-provider</artifactId>
                                    <version>${tinkar.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.lucene</groupId>
                                    <artifactId>lucene-core</artifactId>
                                    <version>${lucene-core.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.lucene</groupId>
                                    <artifactId>lucene-queryparser</artifactId>
                                    <version>${lucene-core.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.lucene</groupId>
                                    <artifactId>lucene-queries</artifactId>
                                    <version>${lucene-core.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.lucene</groupId>
                                    <artifactId>lucene-highlighter</artifactId>
                                    <version>${lucene-core.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.lucene</groupId>
                                    <artifactId>lucene-memory</artifactId>
                                    <version>${lucene-core.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.lucene</groupId>
                                    <artifactId>lucene-sandbox</artifactId>
                                    <version>${lucene-core.version}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/plugins/search</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-sync-plugins</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>dev.ikm.orchestration.provider</groupId>
                                    <artifactId>sync-provider</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                                <artifactItem>
                                        <groupId>dev.ikm.jpms</groupId>
                                        <artifactId>jgit</artifactId>
                                        <version>${jgit.version}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/plugins/sync</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-window-service-plugins</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>dev.ikm.orchestration.provider</groupId>
                                    <artifactId>window-menu-provider</artifactId>
                                    <version>${project.parent.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>dev.ikm.komet</groupId>
                                    <artifactId>search</artifactId>
                                    <version>${komet.version}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/plugins/window-menu-provider</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>